# MemSAD

./: .dockerignore  .editorconfig  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE_CODE_CONTEXT_ATTACK_IMPLEMENTATION.md  CLAUDE_CODE_CONTEXT_DEFENSE_FRAMEWORK.md  CLAUDE_CODE_CONTEXT_ENVIRONMENT.md  CLAUDE_CODE_CONTEXT_EVALUATION_BENCHMARKING.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.md  debugging_process.md  memory-agent-research-document.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  smoke_test.py  test_typer_app.py  test_typer_routing.py  watch_paper.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  research_task.md
.github/workflows/: ci.yml
configs/attacks/: agentpoison.yaml  injecmem.yaml  minja.yaml
configs/defenses/: watermark.yaml
configs/memory/: amem.yaml  mem0.yaml  memgpt.yaml
docs/: publication_strategy.md
docs/api/: API_REFERENCE.md
docs/arxiv/: README.md  main.aux  main.bbl  main.blg  main.out  main.tex  neurips_2026.tex  references.bib
docs/audit/: CODEBASE_AUDIT_INVENTORY.md  RESEARCH_METHODOLOGY.md
docs/context/: CLAUDE_CODE_CONTEXT_ATTACK_IMPLEMENTATION.md  CLAUDE_CODE_CONTEXT_DEFENSE_FRAMEWORK.md  CLAUDE_CODE_CONTEXT_ENVIRONMENT.md  CLAUDE_CODE_CONTEXT_EVALUATION_BENCHMARKING.md
docs/guides/: USAGE_GUIDE.md
docs/neurips2026/: checklist.tex  main.tex  references.bib
docs/paper/: main.aux  main.bbl  main.blg  main.out  main.tex  references.bib
docs/paper/sections/: appendix.tex  attacks.tex  conclusion.tex  defenses.tex  discussion.tex  experiments.tex  introduction.tex  related_work.tex
docs/research/: memory-agent-research-document.md  progress_report.md  publication_plan.md
notebooks/analysis/: 03_ablation_study.ipynb
notebooks/experiments/: 01_attack_characterization.ipynb  02_defense_evaluation.ipynb
notebooks/visualization/: 04_results_visualization.ipynb
results/: llm_sanitization_results.json  sir_simulation_results.json
results/agent_traces/: agentpoison_summary.json  agentpoison_traces.json  injecmem_summary.json  injecmem_traces.json  minja_summary.json  minja_traces.json
results/compound_exposure/: compound_exposure_results.json
results/mem0_eval/: mem0_comparison.json
results/phase28/: phase28_results.json  table1_attack_results_1k.tex  table2_defense_results_1k.tex
results/tables/: table1_attack_results.tex  table2_attack_defense_matrix.tex  table2_defense_matrix.tex  table3_defense_tpr_fpr.tex  table4_evasion.tex  table5_adaptive_sad.tex  table6_ablation.tex  table_calibration_sensitivity.tex  table_compound_exposure.tex  table_encoder_generalization.tex  table_llm_sanitization.tex  table_mem0_validation.tex  table_memsad_plus.tex  table_multi_encoder_1k.tex  table_ood_comparison.tex  table_sir_propagation.tex  table_tool_agent.tex
scripts/: deploy_hf_space.sh
src/app/: README.md  app.py  requirements.txt
src/attacks/: adaptive_attack.py  base.py  implementations.py
src/attacks/trigger_optimization/: __init__.py  dpr_optimizer.py  optimizer.py
src/data/: corpus_extended.py  nq_subset.py  synthetic_corpus.py
src/defenses/: base.py  implementations.py  lexical_diversity.py  llm_sanitization.py  memsad_plus.py  ood_baselines.py  robust_rag.py  semantic_anomaly.py
src/evaluation/: ablation_study.py  agent_eval.py  attack_defense_matrix.py  benchmarking.py  compound_exposure.py  comprehensive_eval.py  evasion_eval.py  mem0_eval.py  multi_agent_propagation.py  multi_encoder_eval.py  retrieval_sim.py  statistical.py  tool_agent_eval.py
src/memory_systems/: __init__.py  base.py  graph_memory.py  vector_store.py  wrappers.py
src/scripts/: calibration_sensitivity.py  encoder_generalization.py  experiment_runner.py  generate_paper_results.py  generate_phase17_figures.py  generate_phase22_figures.py  generate_phase28_tables.py  generate_phase35_figures.py  generate_sad_figures.py  generate_sir_simulation.py  generate_tables.py  nq_evaluation.py  run_llm_sanitization_eval.py  run_phase28_experiments.py  run_pipeline.py  visualization.py
src/tests/: conftest.py  test_memory_security.py  test_phase31.py
src/utils/: config.py  logging.py
src/watermark/: token_watermark.py  watermarking.py
structured-workflow/comprehensive-implementation-of-memory-agent-security-research-including-attack-characterization-and-defense-framework-development/: 00-planning-2026-01-17.md  01-audit-analysis.md  01-inventory-changes.json  03-refactor-changes.json  03-refactor-progress.md  04-determine-implementation-plan.json  04-determine-roadmap.md  04-question-clarifications.md  workflow-status.json
structured-workflow/memory-agent-security/: 00-setup.md
tests/: conftest.py  test_memory.py  test_message_serialization.py
