# unified project configuration for memory-agent-security
# all tool configs centralized here except flake8 (uses .flake8)

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-agent-security"
version = "0.1.0"
description = "attack and defense evaluation framework for llm memory systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ishrith Gowda", email = "ishrithgowda@berkeley.edu"},
]
keywords = [
    "llm",
    "memory-systems",
    "adversarial-attacks",
    "security",
    "rag",
    "retrieval-augmented-generation",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "networkx>=3.0",
    "pyyaml>=6.0",
    "cryptography>=41.0",
    "tqdm>=4.65",
    "rich>=13.0",
]

[project.optional-dependencies]
ml = [
    "torch>=2.0",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "faiss-cpu>=1.7",
]
llm = [
    "openai>=1.0",
    "anthropic>=0.20",
]
memory = [
    "qdrant-client>=1.6",
    "chromadb>=0.4",
    "neo4j>=5.0",
]
experiment = [
    "wandb>=0.15",
    "omegaconf>=2.3",
    "hydra-core>=1.3",
    "plotly>=5.15",
]
notebook = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "notebook>=7.0",
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.3",
    "pytest-timeout>=2.1",
    "black>=24.0",
    "isort>=5.12",
    "flake8>=7.0",
    "flake8-bugbear>=24.0",
    "flake8-comprehensions>=3.14",
    "ruff>=0.4",
    "mypy>=1.8",
    "bandit>=1.7",
    "pyupgrade>=3.15",
    "pre-commit>=3.5",
    "safety>=3.0",
]
all = [
    "memory-agent-security[ml,llm,memory,experiment,notebook,dev]",
]

[project.urls]
Repository = "https://github.com/ishrith-gowda/memory-agent-security"

# ---------------------------------------------------------------------------
# black
# ---------------------------------------------------------------------------
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
extend-exclude = '''
/(
    external
    | \.git
    | \.venv
    | build
    | dist
)/
'''

# ---------------------------------------------------------------------------
# isort
# ---------------------------------------------------------------------------
[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "attacks",
    "defenses",
    "evaluation",
    "memory_systems",
    "watermark",
    "utils",
    "data",
    "scripts",
]
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER",
]
skip_glob = ["external/*"]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "external",
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "E203",   # whitespace before ':' (black conflict)
    "E741",   # ambiguous variable name (l, O, I — common in research)
    "B007",   # unused loop control variable (intentional in sweeps)
    "B008",   # function call in default arg (common in our codebase)
    "B904",   # raise from (stylistic)
    "B905",   # zip without strict (python 3.10 compat)
    "C408",   # unnecessary dict/list call (readability preference)
    "SIM102", # collapsible if (readability preference)
    "SIM108", # ternary operator (readability preference)
    "SIM117", # multiple with (readability preference)
    "UP007",  # use X | Y for union (python 3.10 compat)
    "RUF001", # ambiguous unicode in string (author names in citations)
    "RUF002", # ambiguous unicode in docstring (author names in citations)
    "RUF003", # ambiguous unicode in comment (author names in citations)
    "RUF005", # collection literal concatenation (readability)
    "RUF012", # mutable class variable (dataclass pattern)
    "RUF046", # unnecessary int cast (explicit clarity)
    "RUF059", # unused unpacked variable (intentional destructuring)
    "RUF100", # unused noqa directive (noqa comments needed for flake8 compat)
]

[tool.ruff.lint.per-file-ignores]
"src/tests/*" = ["E402", "B011", "SIM300"]
"tests/*" = ["E402", "B011", "SIM300"]
"src/scripts/*" = ["E402"]
"src/app/*" = ["E402"]
"conftest.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = [
    "attacks",
    "defenses",
    "evaluation",
    "memory_systems",
    "watermark",
    "utils",
    "data",
    "scripts",
]

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
disallow_untyped_decorators = false
disallow_untyped_defs = false
ignore_missing_imports = true
show_error_codes = true
exclude = [
    "external/",
    "build/",
    "dist/",
]

[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "faiss.*",
    "wandb.*",
    "chromadb.*",
    "qdrant_client.*",
    "neo4j.*",
    "transformers.*",
    "torch.*",
    "openai.*",
    "anthropic.*",
    "omegaconf.*",
    "hydra.*",
    "letta.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["src/tests", "tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=src",
    "--cov-report=html:reports/coverage",
    "--cov-report=term-missing",
    "--cov-fail-under=60",
    "-p", "no:ddtrace",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests requiring gpu hardware",
    "integration: marks tests as integration tests",
    "performance: marks tests as performance benchmarks",
    "smoke: marks tests as smoke tests for basic functionality",
    "data: marks tests that download or generate data",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src"]
omit = [
    "src/tests/*",
    "src/scripts/*",
    "src/app/*",
    "*/conftest.py",
    "*/setup.py",
]
branch = true

[tool.coverage.report]
show_missing = true
precision = 2
fail_under = 60
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "reports/coverage"

# ---------------------------------------------------------------------------
# bandit
# ---------------------------------------------------------------------------
[tool.bandit]
exclude_dirs = ["src/tests", "tests", "external"]
skips = [
    "B101",  # assert used (fine in research code)
    "B107",  # hardcoded password default (secret_key="watermark" is not a password)
    "B110",  # try/except/pass (intentional fallback in research code)
    "B311",  # random used (not security-critical)
    "B404",  # subprocess import (used in setup)
    "B603",  # subprocess call (used in setup)
    "B615",  # huggingface unpinned revision (research models)
]
